--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,5 @@ android {
 
 dependencies {
     implementation 'org.commonmark:commonmark:0.18.0'
+    implementation 'org.commonmark:commonmark-ext-autolink:0.18.0'
 }
