--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.0'
+        classpath 'com.android.tools.build:gradle:7.3.1'
     }
 }
 
@@ -20,6 +20,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
+    namespace "org.billthefarmer.print"
 
     defaultConfig {
         applicationId "org.billthefarmer.print"
@@ -44,8 +45,10 @@ android {
 }
 
 dependencies {
-    implementation 'org.commonmark:commonmark:0.18.2'
-    implementation 'org.commonmark:commonmark-ext-autolink:0.18.2'
-    implementation 'org.commonmark:commonmark-ext-gfm-tables:0.18.2'
-    implementation 'org.commonmark:commonmark-ext-task-list-items:0.18.2'
+    implementation 'org.commonmark:commonmark:0.20.0'
+    implementation 'org.commonmark:commonmark-ext-ins:0.20.0'
+    implementation 'org.commonmark:commonmark-ext-autolink:0.20.0'
+    implementation 'org.commonmark:commonmark-ext-gfm-tables:0.20.0'
+    implementation 'org.commonmark:commonmark-ext-task-list-items:0.20.0'
+    implementation 'org.commonmark:commonmark-ext-gfm-strikethrough:0.19.0'
 }
