--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -34,6 +34,15 @@
         <category android:name="android.intent.category.DEFAULT" />
         <data android:mimeType="text/*" />
       </intent-filter>
+      <intent-filter
+          android:scheme="http"
+          tools:ignore="AppLinkUrlError">
+        <action android:name="android.intent.action.SEND" />
+        <action android:name="android.intent.action.VIEW" />
+
+        <category android:name="android.intent.category.DEFAULT" />
+        <data android:mimeType="application/octet-stream" />
+      </intent-filter>
     </activity>
 
   </application>
