--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
     }
 }
 
@@ -39,7 +39,7 @@ android {
 
     lintOptions {
         disable 'SetJavaScriptEnabled', 'OldTargetApi', 'NonConstantResourceId',
-            'ExpiredTargetSdkVersion', 'VectorRaster'
+            'ExpiredTargetSdkVersion', 'VectorRaster', 'AndroidGradlePluginVersion'
         // abortOnError false
     }
 }
